[metadata]
name = evb.py
version = attr: evb.__version__
description = Asynchronous wrapper for the EditVideoBot API
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@outlook.com
url = https://github.com/regulad/evb.py
download_url = https://codeload.github.com/regulad/evb.py/zip/refs/heads/main
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = GPLv3
keywords =
    async
    api

[options]
python_requires = >=3.7,<4
packages = evb
test_suite = evb.tests
install_requires =
    aiohttp>=3.8.1,<4
    typing-extensions>=4.0.1,<5
tests_requires =
    importlib_resources
